# code-test

./: .gitignore  pyproject.toml
code_test/: app.py  config.py
code_test/weather/: __init__.py  views.py
tests/: conftest.py  test_global.py  test_openapi.py  test_weather.py
